--- a/dais0n.hatenablog.com/entry/2020/07/05/011121.md
+++ b/dais0n.hatenablog.com/entry/2020/07/05/011121.md
@@ -15,7 +15,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 出品されていた方によると2019年2月に購入し、約半年ぐらいの使用で頻度は少ないとのこと。 実際購入して見てみても、あまり使っているような形跡はなく、綺麗だった。
 
-値段は約13万円で購入。定価は2020年5月現在で16〜18万くらいかなと。
+値段は約13万円で購入。定価は2020年5月現在で16〜18万くらいかと
 
 ## メルカリで洗濯機を買う際に考慮すべきこと
 
