--- a/dais0n.hatenablog.com/entry/2020/09/06/164028.md
+++ b/dais0n.hatenablog.com/entry/2020/09/06/164028.md
@@ -59,7 +59,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 コロナが収束した後でも、働き方に関しては不可逆で、リモートで働くことが普通になると思います。論理入社世代として、リモートで入社して働き始める上で、自分なりにやったほうがよいんじゃないかなみたいなものを掴んできたので、最後に紹介できればと思います。
 
-- 1. 定期的に雑談をする場を設ける
+#### 1. 定期的に雑談をする場を設ける
 
 今のチームでは夕方に参加自由なティータイムを30分程度設定してもらっています。そこでコーヒーを飲んだりしながら何気ない雑談だったり、仕事の相談だったりをします。
 
@@ -67,7 +67,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 リモートだと、上記がほぼわからないので、最初は相談しにくかったり、変な遠慮をしてしまいがちになるかと思います。相談し、お互いの雰囲気をわかってもらう時間をとることで、リモート入社をする人も仕事がしやすくなるんじゃないかなと思います。
 
-- 2.  オンライン上に自分の席を作る
+#### 2.  オンライン上に自分の席を作る
 
 これは、常に常駐しているオープンなハングアウトの部屋などを作ったりするということです。これをすることで、なんか自分に用がある人はそこに入ってきてくれます。自分から話かけてもらいやすい環境を作ります。
 
@@ -75,7 +75,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 弊社はremoを使ってるので、毎日出勤時にremoに入って同じ席についてるようにしています。
 
-- 3. times(分報)で自分のことを発信していく
+#### 3. times(分報)で自分のことを発信していく
 
 弊社はtimes文化があって、大体みんな自分のtimes_dais0nみたいな分報部屋をもっています。その部屋は自分のつぶやきを書き込んだりする社内twitterとして使います。
 
