--- a/dais0n.hatenablog.com/entry/2020/09/06/164028.md
+++ b/dais0n.hatenablog.com/entry/2020/09/06/164028.md
@@ -23,7 +23,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 そして、社内の別のチームにいくか、会社を変えてしまうかと考えたときに、まずは転職活動をしてみて、自分の市場価値がどれくらいなのかを見てみようと。それから、転職するか社内の別チームにいくのかを考えても良いのかなと思って転職活動をはじめました。
 
-結果転職をしたわけですが、正直、前職には特に転職を決めるような不満はなく、楽しい3年間を過ごさせてもらいました。ここまで組織として成熟している会社はなかなかないので、新卒として入れてエンジニアリングだけでなく、組織に関しても色々学ばさせてもらえたのは本当にラッキーでした。
+結果転職をしたわけですが、前職には特に転職を決めるような不満はなく、楽しい3年間を過ごさせてもらいました。ここまで組織として成熟している会社はなかなかないと思うので、新卒として入れてエンジニアリングだけでなく、組織に関しても色々学ばさせてもらえたのは本当にラッキーでした。
 
 ### 転職ドラフトについて
 
@@ -53,7 +53,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 ### 論理入社について
 
-自分はFreeeへは面接から、入社、業務までフルリモートで行いました。オフィスに行ったのも、開発メンバーに物理的に会ったのも入社からしばらく経ってからで、直属のマネージャとは未だに物理的に顔を合わせたことはありません。
+自分はFreeeへは面接から、入社、業務までフルリモートで行いました。オフィスに行ったのも、開発メンバーに物理的に会ったのも入社からしばらく経ってからで、直属のマネージャとは入社から3ヶ月以上経った今でも未だに物理的に顔を合わせたことはありません。
 
 [https://twitter.com/dais0n_/status/1262334933663510528:embed#論理入社]
 
@@ -77,11 +77,11 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 #### 3. times(分報)で自分のことを発信していく
 
-弊社はtimes文化があって、大体みんな自分のtimes_dais0nみたいな分報部屋をもっています。その部屋は自分のつぶやきを書き込んだりする社内twitterとして使います。
+弊社はtimes文化があって、大体みんな自分のtimes_dais0nみたいな分報部屋をもっています。これは社内twitter的に機能していて、自分の諸々を垂れ流す部屋になってます。
 
 このtimesの良い面は2つあって、まずは、困っているときに困っている内容とかを書き込むと誰かが助けてくれることです。例えば、なんだこのエラーみたいなことを書き込むと知っている人が、なんか今bugがdevelopに入ってるみたいですねみたいなことを教えてくれたりします。
 
 もう1つは雑談とかぶるのですが、自分のことを発信し、趣味が似ている人と繋がれることです。〇〇さんのtimesで聞いた情報だみたいなのを個々のtimesにリンクしたりするので、割とtimesで趣味の合う人と繋がれたりします。チームを跨いでの交流はリモートだと難しく、課題の一つだと思うのですが、timesは一つの手段かなと思ってます。
 
-この記事が転職ドラフト及び、リモート下での転職活動の参考になれば幸いです。な
+この記事が転職ドラフト及び、リモート下での転職活動の参考になれば幸いです。
 
