--- a/dais0n.hatenablog.com/entry/2020/09/06/164028.md
+++ b/dais0n.hatenablog.com/entry/2020/09/06/164028.md
@@ -1,19 +1,19 @@
 ---
-Title: Freeeへ論理入社をした話
+Title: freeeへ論理入社をした話
 Date: 2020-09-06T16:40:28+09:00
 URL: https://dais0n.hatenablog.com/entry/2020/09/06/164028
 EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006613624518741
 ---
 
-## Freeeへ論理入社をした話
+## freeeへ論理入社をした話
 
 ### はじめに
 
 こちらの記事は転職ドラフト体験談投稿キャンペーンに参加しています。
 
-20代も後半も入ったので健康を意識しようと思い、まずは発酵食品を食べるのを習慣にしつつある@dais0nです。コロナ下の3月から転職ドラフトを使い転職活動を始め、5月にヤフー株式会社を退社し、freee株式会社にエンジニアとしてJoinしました。
+20代も後半も入ったので健康を意識しようと思い、まずは発酵食品を食べるのを習慣にしようかなと、糠漬けのために糠を買った@dais0nです。コロナ下の3月から転職ドラフトを使い転職活動を始め、5月にヤフー株式会社を退社し、freee株式会社にエンジニアとしてJoinしました。
 
-本記事では、転職のきっかけや、転職にあたって利用させてもらった転職ドラフトについて、また現在働いているFreee社について素直な感想を書いていきたいと思います。
+本記事では、転職のきっかけや、転職にあたって利用させてもらった転職ドラフトについて、また現在働いているfreee社について素直な感想を書いていきたいと思います。
 
 ### 転職のきっかけ
 
@@ -37,9 +37,9 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 またオファー内容から自分の市場価値及び、企業がオファーしている人材のレジュメが見れたりもするので、見ているうちに企業がどんな人材を欲しているかもわかったりするので、ひとまず登録してみるのもオススメのサービスです。
 
-### Freeeについて
+### freeeについて
 
-現在働いているFreee社は、オープンな文化で、日々新しい制度を試してみてたり、エンジニアも個人でガツガツ発信したりしてます。毎日スピード感があります。
+現在働いているfreee社は、オープンな文化で、日々新しい制度を試してみてたり、エンジニアも個人でガツガツ発信したりしてます。毎日スピード感があります。
 
 入ってみて面白いなと思ったのは、マネージャも全員プレイヤーでガンガンコード書くプレイングマネージャです。そのため、正直マネージャ感はあまりないといった感じで、上司と部下といった通常ある組織感が希薄だったことです。
 
@@ -49,11 +49,11 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 逆に、前職と比べて、組織的な部分がまだ未成熟で個人の能力に委ねられている部分が多く、組織や制度がしっかりしているのが好きな人はあまり向いていないかもしれません。
 
-ここはFreeeに限らず、ベンチャー向いているかみたいな部分かなと思ってます。
+ここはfreeeに限らず、ベンチャー向いているかみたいな部分かなと思ってます。
 
 ### 論理入社について
 
-自分はFreeeへは面接から、入社、業務までフルリモートで行いました。オフィスに行ったのも、開発メンバーに物理的に会ったのも入社からしばらく経ってからで、直属のマネージャとは入社から3ヶ月以上経った今でも未だに物理的に顔を合わせたことはありません。
+自分はfreeeへは面接から、入社、業務までフルリモートで行いました。オフィスに行ったのも、開発メンバーに物理的に会ったのも入社からしばらく経ってからで、直属のマネージャとは入社から3ヶ月以上経った今でも未だに物理的に顔を合わせたことはありません。
 
 [https://twitter.com/dais0n_/status/1262334933663510528:embed#論理入社]
 
