--- a/dais0n.hatenablog.com/entry/2020/09/06/164028.md
+++ b/dais0n.hatenablog.com/entry/2020/09/06/164028.md
@@ -83,5 +83,5 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 もう1つは雑談とかぶるのですが、自分のことを発信し、趣味が似ている人と繋がれることです。〇〇さんのtimesで聞いた情報だみたいなのを個々のtimesにリンクしたりするので、割とtimesで趣味の合う人と繋がれたりします。チームを跨いでの交流はリモートだと難しく、課題の一つだと思うのですが、timesは一つの手段かなと思ってます。
 
-この記事が転職ドラフト及び、リモート下での転職活動の参考になれば幸いです。
+この記事が転職ドラフト及び、リモート下での働き方の一助になれば幸いです。
 
