--- a/dais0n.hatenablog.com/entry/2020/09/06/164028.md
+++ b/dais0n.hatenablog.com/entry/2020/09/06/164028.md
@@ -41,7 +41,7 @@ EditURL: https://blog.hatena.ne.jp/dais0n/dais0n.hatenablog.com/atom/entry/26006
 
 現在働いているfreee社は、オープンな文化で、日々新しい制度を試してみてたり、エンジニアも個人でガツガツ発信したりしてます。毎日スピード感があります。
 
-入ってみて面白いなと思ったのは、マネージャも全員プレイヤーでガンガンコード書くプレイングマネージャです。そのため、正直マネージャ感はあまりないといった感じで、上司と部下といった通常ある組織感が希薄だったことです。
+入ってみて面白いなと思ったのは、マネージャはただの役割なので、上下関係はなく社員としては対等なものであるといったことが明言されていたり、マネージャも全員プレイヤーでガンガンコード書くプレイングマネージャです。そのため、上司と部下といった通常ある組織感が希薄だったことです。
 
 開発に関しても、トップダウン的な案件もありますが、どちらかというとボトムアップで決めてスクラムでわいわい案件をこなしていったり、わりと自由に働けるのかなといった感じです。
 
